--- a/adminInvestigador.css
+++ b/adminInvestigador.css
@@ -3,7 +3,7 @@
 }
 .formulario-registro{
     margin: 5% 5%;
-    <--! background-color: aqua; -->
+    /* <--! background-color: aqua; --> */
     width: 90%;
     height: 650px;
     display: grid;
@@ -34,14 +34,30 @@ input{
     text-align: center;
 }
 .formulario-registro-datos button{
-    background-color: rgb(119, 119, 222);
+    background-color: #1B396A;
     color: white;
     height: 85px;
     width: 185px;
 }
+
+.registrop{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    background-color: #1B396A;
+    color: white;
+    height: 85px;
+    width: 185px;
+    text-decoration: none;
+    border: 1.5px solid black;
+    
+}
+.registrop:hover{
+    opacity: .7;
+}
 .formulario-registro-datos button:hover{
-    background-color: rgb(86, 86, 218);
-    color: rgb(255, 255, 255);
+    opacity: .7;
 }
 .cabecera-investigador{
     margin-left: 5%;
@@ -56,7 +72,7 @@ input{
     width: 33.3%;
 }
 .cabecera-investigador-contenido span{
-    width: ;
+
     background-color: rgb(119, 119, 222);
     color: white;
 }
