--- a/estilos/template.css
+++ b/estilos/template.css
@@ -65,12 +65,60 @@ body{
     font-size: x-large;
     cursor: pointer;
 }
-
 .navTec{
     width: 100%;
     height: 100%;
 }
-
+.navContainer2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: larger;
+    color: #1b396a;
+    font-weight: 600;
+    
+}
+.navContainer2 a{
+    text-decoration: none;
+    color: #1b396a;
+}
+.navContainer2 ul{
+    display: flex;
+    align-items:center ;
+    justify-content: space-around;
+    list-style: disclosure-open;
+    margin: 0 2em;
+}
+.navContainer2 li{
+    margin: 2em;
+    align-items: center;
+    cursor: pointer;
+}
+.navContainer3{
+    display: flex;
+    flex-direction: column;
+    background-color: #1b396a;
+    color: #fff;
+    justify-content: space-around;
+    font-weight: 600;
+}
+.navContainer3 a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.navContainer3 ul{
+    display: flex;
+    align-items:center ;
+    justify-content: space-around;
+    font-size: larger;
+    cursor: pointer;
+    list-style: disclosure-open;
+} 
+.navContainer3 a{
+    display: flex;
+    justify-content:center;
+    
+}
 .footTecn{
     background-color: #1b396a;
     display: flex;
