--- a/estilos/registroCuenta.css
+++ b/estilos/registroCuenta.css
@@ -1,8 +1,9 @@
 .contenedorFieldset {
     margin: 0 auto;
-    width: 80%;
-    height: 300px;
+    width: 70%;
+    height: 350px;
     border: none;
+    
 }
 
 .legendf {
@@ -13,10 +14,11 @@
 .contenedorRegistro {
     padding: 1em;
     display: flex;
+    
     width: 100%;
     height: 300px;
     display: grid;
-    border: 2px solid #1B396A;
+ 
     grid-template-columns: 20% 20% 20% 20% 20%;
     grid-template-rows: 20% 20% 20% 20% 20%;
     border-radius: 5px;
@@ -27,37 +29,26 @@
 .camporegistro1 {
     grid-row: 1/2;
     grid-column: 1/3;
-
-
 }
 
 .camporegistro2 {
     grid-row: 2/3;
     grid-column: 1/3;
-
-
-
 }
 
 .camporegistro3 {
     grid-row: 3/4;
     grid-column: 1/3;
-
-
 }
 
 .camporegistro4 {
     grid-row: 1/2;
     grid-column: 4/6;
-
-
 }
 
 .camporegistro5 {
-
     grid-column: 4/6;
     grid-row: 2/3;
-
 }
 
 .camporegistro6 {
@@ -79,6 +70,21 @@
     grid-row: 5/6;
 }
 
+.camporegistro10{
+    grid-row: 5/7;
+    grid-column: 4/6;
+}
+
+.camporegistro11{
+    grid-column: 4/6;
+    grid-row: 7/8;
+}
+
+.camporegistro12{
+    grid-column: 1/3;
+    grid-row: 7/8;
+}
+
 .camporegistroin {
     width: 100%;
 }
@@ -91,6 +97,7 @@
     flex-direction: column;
     justify-content: center;
     justify-items: center;
+    font-size: larger;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: black;
     text-decoration: none;
@@ -105,13 +112,15 @@
 }
 
 .bregistro {
-    grid-row: 5/6;
-    grid-column: -3/-2;
+    margin: 1em 0 0 0;
+    grid-column: 2/3;
+    grid-row: 10/11;
 }
 
 .blimpiar {
-    grid-row: 5/6;
-    grid-column: -2/-1;
+    margin: 1em 0 0 0;
+    grid-row: 10/11;
+    grid-column: 4/5;
 }
 
 .error{
